added home marker in a list

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -13,9 +13,9 @@
 
 <div>
     <ui-gmap-google-map center="map.center" zoom="map.zoom">
-      <ui-gmap-marker idKey="marker.id" coords="marker.coords">
+      <ui-gmap-markers models="markers.marker" coords="'self'">
+      </ui-gmap-markers>
 
-      </ui-gmap-marker>
     </ui-gmap-google-map>
 
 </div>
