--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,21 +1,26 @@
 <div class="jumbotron">
   <h1>'Allo, 'Allo!</h1>
+
   <p class="lead">
     <br>
     Where are some boris bikes near by...
   </p>
+
   <form ng-submit="submit()">
     Where I am: <input type="text" ng-model="userDetails.location"/>
-    <input type="submit"  value="cycle time"/>
+    <input type="text" ng-model="radius"/>
+    <input type="submit" value="cycle time"/>
   </form>
 
 </div>
 
 <div>
-    <ui-gmap-google-map center="map.center" zoom="map.zoom">
-      <ui-gmap-markers models="markers.marker" coords="'self'">
-      </ui-gmap-markers>
-
-    </ui-gmap-google-map>
-
+  <ui-gmap-google-map center="map.center" zoom="map.zoom">
+    <ui-gmap-layer  type="BicyclingLayer" show="true"></ui-gmap-layer>
+    <ui-gmap-markers models="markers.marker" coords="'self'" click="'onClick'" >
+      <ui-gmap-windows show="show" options="'options'">
+      </ui-gmap-windows>
+    </ui-gmap-markers>
+  </ui-gmap-google-map>
+  <p>{{markers.marker}}}</p>
 </div>
