more info window stuff
add a new function tomorrow to generate info windows

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -77,5 +77,5 @@ body {
     border-bottom: 0;
   }
 }
-
+#map-content {width: 200px; height:100px; }
 .angular-google-map-container { height: 400px; }
