--- a/app/views/main.html
+++ b/app/views/main.html
@@ -8,8 +8,8 @@
 
   <form ng-submit="submit()">
     <label>Where I am:</label> <input type="text" ng-model="userDetails.location"/>
-    <label>Where I want to go:</label> <input type="text" placeholder="where to?" ng-model="destination"/>
-    <label>Radius:</label> <input type="text" ng-model="radius"/>
+    <label>Where I want to go:</label> <input type="text" placeholder="where to?" ng-model="userDetails.destination"/>
+    <label>Radius:</label> <input type="text" ng-model="userDetails.radius"/>
     <input type="submit" value="cycle time"/>
   </form>
 </div>
@@ -22,5 +22,5 @@
       </ui-gmap-windows>
     </ui-gmap-markers>
   </ui-gmap-google-map>
-  <p>{{markers.marker}}}</p>
+  <p>{{userDetails}}}</p>
 </div>
