done. all tests pass, odd issue where if you try to tun integration and unit test in same run it seems to load nock for integration which isnt needed

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
+  <h1>Tour de London</h1>
 
   <p class="lead">
     <br>
@@ -22,5 +22,5 @@
       </ui-gmap-windows>
     </ui-gmap-markers>
   </ui-gmap-google-map>
-  <p>{{userDetails}}}</p>
+
 </div>
