updated test and altered spelling a bit!

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,7 +3,7 @@
 
   <p class="lead">
     <br>
-    Where are some near by boris bikes?
+    Where are some nearby Boris Bikes?
   </p>
 
   <form ng-submit="submit()">
