altered map to change boundry on marker add

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -15,7 +15,7 @@
 </div>
 
 <div>
-  <ui-gmap-google-map center="map.center" zoom="map.zoom">
+  <ui-gmap-google-map center="map.center" zoom="map.zoom" control="map.control">
     <ui-gmap-layer type="BicyclingLayer" show="true"></ui-gmap-layer>
     <ui-gmap-markers models="markers.marker" coords="'self'" click="'onClick'">
       <ui-gmap-windows show="show" options="'options'">
